# OpenAPI.yml
@@ -460,7 +460,8 @@ paths:
           description: No response body
   /waitlist/:
     get:
-      operationId: waitlist_retrieve
+      operationId: waitlist_list
+      description: Get all waitlist entries ordered by waiting number
       tags:
       - waitlist
       security:
@@ -469,19 +470,68 @@ paths:
       - {}
       responses:
         '200':
-          description: No response body
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Waitlist'
+          description: ''
     post:
       operationId: waitlist_create
       tags:
       - waitlist
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Waitlist'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Waitlist'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Waitlist'
+        required: true
       security:
       - cookieAuth: []
       - basicAuth: []
       - {}
       responses:
-        '200':
-          description: No response body
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Waitlist'
+          description: ''
 components:
+  schemas:
+    Waitlist:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          readOnly: true
+        email:
+          type: string
+          format: email
+          maxLength: 254
+        referrer:
+          type: string
+          maxLength: 50
+        waiting_number:
+          type: integer
+          readOnly: true
+        created_at:
+          type: string
+          format: date-time
+          readOnly: true
+      required:
+      - created_at
+      - email
+      - id
+      - waiting_number
   securitySchemes:
     basicAuth:
       type: http
